syntax = "proto2";

package logging;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/logging/config";

////////////////////////////////////////////////////////////////////////////////

enum Level {
    LEVEL_TRACE = 0;
    LEVEL_DEBUG = 1;
    LEVEL_INFO = 2;
    LEVEL_WARN = 3;
    LEVEL_ERROR = 4;
    LEVEL_FATAL = 5;
}

message StderrLoggingConfig {}

message JournaldLoggingConfig {}

message LoggingConfig {
    oneof Logging {
        StderrLoggingConfig LoggingStderr = 1;
        JournaldLoggingConfig LoggingJournald = 2;
    }
    optional Level Level = 3 [default = LEVEL_INFO];
}
